# colab-gcp-auth

./: README.md  pyproject.toml
src/: auth.py
src/colab_gcp_auth/: __init__.py  auth.py
